# tictactoe

./: .gitignore  CMakeLists.txt  Dockerfile  MakeGUI  Makefile  README.md  ai.c  ai.h  game.c  game.h  main.c  minimax.c  minimax.h  output.txt  run.sh  tgui.c  tgui.h  tictactoe.c  tictactoe.h  utils.c  utils.h
.github/workflows/: docker-image.yml
docker/: Dockerfile
docker/rootfs/etc/ssh/: sshd.conf
docker/rootfs/home/ttt/: run.sh
include/: loopback.h  tictactoe.h  utils.h
src/: ai.c  ai.h  game.c  game.h  lobby.c  lobby.h  loopback.c  loopback.h  main.c  tgui.c  tictactoe.c  utils.c
